<resources>
    <string name="app_name">Scenes</string>
    <string name="enable_work_tile_title_text">Enable Tile Work Controls</string>
    <string name="notification_tile_tile">Notification Tile</string>
    <string name="tile_settings">Tile Settings</string>
    <string name="work_tile_label">Work Sound</string>
    <string name="volume_settings">Volume Settings</string>
    <string name="ring">Ring</string>
    <string name="sound">Sound</string>
    <string name="work_tile_help_text">The settings below set the sound levels when the toggle is <b>ON</b>. Setting the toggle <b>OFF</b> will switch the sound volume back to the previous state.</string>
    <string name="update">Update</string>
    <string name="dnd_explanation">For this function to operate properly you must give it access to change the <b>Do Not Disturb</b> option.</string>
    <string name="wifi_permission"><b>WiFi</b> permission is required for this function!</string>
    <string name="enable">Enable</string>
    <string name="skip">Skip</string>
    <string name="location_based">Location - Auto Locate</string>
    <string name="set_up">Set Up</string>
    <string name="location_based_message">Location based work mode uses Google Play Services to get the information when you are near your work. This app will not be requesting location services, and will not be using your phone\'s battery.</string>
    <string name="title_activity_location">Map</string>
    <string name="disable">Disable</string>
    <string name="enable_location_work_controls">Enable Location Work Controls</string>
    <string name="work_location">Work Location:</string>
    <string name="change">Change</string>
    <string name="disable_text">Disable</string>
    <string name="enable_text">Enable</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="volume_setting_groups">Scenes</string>
    <string name="below_is_the_list_off_existing_settings_you_have_setup">Below is the list off existing scenes you have setup.</string>
    <string name="selected_image">selected image</string>
    <string name="volume_image">volume image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_button">add button</string>
    <string name="add_a_new_group">Add a new scene</string>
    <string name="select_an_icon">Select an Icon</string>
    <string name="select_a_name">Select a Name</string>
    <string name="ring_preference">Ring Preference</string>
    <string name="media_preference">Media Preference</string>
    <string name="after_leaving_scene_text">Set volume settings after leaving the scene</string>
    <string name="go_to_prev">Change back to Previous (Prior to entering scene)</string>
    <string name="do_nothing">Do Nothing (Keep at the scene\'s level)</string>
    <string name="set_custom_level">Set Custom Level</string>
    <string name="help_text_ring_into_scene">Set ring settings when entering a scene</string>
    <string name="help_text_media_into_scene">Set media settings when entering a scene</string>
    <string name="tile_image">Tile Image</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="checkmark">checkmark</string>
    <string name="scene_location">Scene Location</string>
    <string name="select_a_location">Select a Location at which this Scene will activate:</string>
    <string name="location">Location</string>
    <string name="current_location">Location -</string>
    <string name="scene_name">Scene Name</string>
    <string name="location_help_text">This app requires Location Permission to work properly. We will not be tracking your location actively, and there will be no battery implications.</string>
    <string name="empty_text">No scenes added yet, please go ahead and start with your first one!</string>
    <string name="no_scenes_added_yet">No scenes added yet</string>
    <string name="help_text">Do you have any suggestions? Please let us know!</string>
    <string name="suggest">Suggest</string>
    <string name="help_icon">Help Icon</string>
    <string name="wifi_settings">When entering location, what WiFi status would you like?</string>
    <string name="enable_compat">Enable</string>
    <string name="enable_wifi">WiFi will be enabled</string>
    <string name="disable_wifi">WiFi will be disabled</string>
    <string name="wi_fi_settings">Wi-Fi Preferences</string>
    <string name="profile_information_mandatory_fields">Profile Information (Mandatory Fields)</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="settings">Settings</string>
    <string name="location_range_meters">Location Range (Meters)</string>
    <string name="help_full_text">When entering set scene, these are the phone settings that will be altered to your preference.</string>
</resources>
