<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingEnd="@dimen/horizontal_margin"
    android:paddingStart="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin">

    <TextView
        android:id="@+id/location_help_text"
        style="@style/SettingsSubText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/location_based_message"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/setup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin">

        <TextView
            android:id="@+id/textView"
            style="@style/CardSwitchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/location_based_button"
            android:text="@string/enable_location_work_controls" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/location_based_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/set_up"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                style="@style/CardSwitchLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_weight="40"
                android:gravity="end|center_vertical"
                android:text="@string/work_location" />

            <TextView
                android:id="@+id/location_based_location"
                style="@style/SettingsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:text="4690 Blah blah blah blh blah" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_vertical_margin"
            android:gravity="end"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/location_based_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/disable"
                android:textColor="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/location_based_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>