<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_overall_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:visibility="visible">

    <TextView
        android:id="@+id/header_text"
        style="@style/ListTextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/notifications_switch"
        style="@style/ListTextButton.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/notification_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification_text"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/show_notifications"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/location_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="27dp"
        android:inputType="number"
        android:text="@string/location_range_meters"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/notification_text"
        app:layout_constraintRight_toLeftOf="@+id/location_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/notification_text" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/location_edit_text"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/location_range"
        app:layout_constraintRight_toRightOf="@+id/notifications_switch"
        app:layout_constraintTop_toTopOf="@+id/location_range"
        app:layout_constraintVertical_bias="0.48000002" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/update"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_edit_text"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/update_button"
        app:layout_constraintRight_toLeftOf="@+id/update_button"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
