<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.tehras.workmode.ui.work.WorkActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/enable_tile_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/vertical_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingTop="@dimen/vertical_margin">

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_tile_tile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/vertical_margin"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/CardSwitchLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/enable_tile_switch"
                    android:text="@string/enable_work_tile_title_text" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/enable_tile_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:gravity="end" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/work_tile_volume_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@color/colorPrimary" />

                <TextView
                    style="@style/SettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/volume_settings" />

                <TextView
                    style="@style/SettingsSubText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:text="@string/work_tile_help_text" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin">

                    <LinearLayout
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/ring"
                            android:src="@drawable/ic_bell_enabled" />

                        <TextView
                            style="@style/SoundLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/ring" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/seek_bar_ring"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vertical_margin"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_margin" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/sound"
                            android:src="@drawable/ic_sound_enabled" />

                        <TextView
                            style="@style/SoundLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/sound" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/seek_bar_sound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vertical_margin"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_margin" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/work_tile_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/update" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/enable_location_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enable_tile_layout" />


</android.support.constraint.ConstraintLayout>
