<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/volume_image"
            android:layout_width="@dimen/list_item_image_size"
            android:layout_height="@dimen/list_item_image_size"
            android:contentDescription="@string/selected_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/volume_name"
                style="@style/ListTextHeader"
                tools:text="Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin" />

            <com.github.tehras.workmode.views.VolumeProgressLayout
                android:id="@+id/ring_progress_bar"
                app:volume_enabled="false"
                app:volume_image="ring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp" />

            <com.github.tehras.workmode.views.VolumeProgressLayout
                android:id="@+id/media_progress_bar"
                app:volume_enabled="false"
                app:volume_image="media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/large_horizontal_margin"
        android:layout_marginStart="@dimen/large_horizontal_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/volume_delete"
            style="@style/ListTextButton.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/volume_edit"
            style="@style/ListTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background"
            android:text="@string/edit" />

    </LinearLayout>

</LinearLayout>